figured out that i was correct. wrapping the li element with an a tag changed the text color when hovered over. I could mess with it more but I think I will come back to it. It is good enough right now. Let me learn some more stuff and I will update it!

--- a/css/styles.css
+++ b/css/styles.css
@@ -48,7 +48,7 @@ li {
 }
 
 .selected:hover {
-    background-blend-mode: normal;
+    background-color: pink;
     color: black;
 }
 
